# okami-nu

./: CMakeLists.txt
core/: CMakeLists.txt
core/embed/: boxmesh.hpp  bunnymesh.hpp  matballmesh.hpp  monkeymesh.hpp  planemesh.hpp  spheremesh.hpp  teapotmesh.hpp  torusmesh.hpp
core/include/okami/: camera.hpp  collection.hpp  embed.hpp  error.hpp  executor.hpp  geometry.hpp  gl_renderer.hpp  glfw_module.hpp  graph.hpp  graph_inl.hpp  input.hpp  log.hpp  mip_generator.hpp  okami.hpp  resources.hpp  samplers.hpp  shader_preprocessor.hpp  system.hpp  texture.hpp  transform.hpp  tree.hpp  tree_inl.hpp  vertex_format.hpp  window.hpp
core/include/okami/glfw/: input.hpp  module.hpp
core/include/okami/im3d/: module.hpp
core/include/okami/ogl/: embed.hpp  geometry.hpp  im3d.hpp  material.hpp  module.hpp  renderer.hpp  samplers.hpp  staticmesh.hpp  texture.hpp  utils.hpp
core/shaders/ogl/: flatcolor.fs  im3d.glsl  staticmesh.vs  textured.fs
core/src/: camera.cpp  embed.cpp  error.cpp  executor.cpp  geometry.cpp  gl_renderer.cpp  glfw_module.cpp  log.cpp  okami.cpp  shader_preprocessor.cpp  texture.cpp  transform.cpp  vertex_format.cpp  window.cpp
core/src/glfw/: input.cpp  module.cpp
core/src/im3d/: module.cpp
core/src/ogl/: embed.cpp  geometry.cpp  im3d.cpp  module.cpp  renderer.cpp  samplers.cpp  staticmesh.cpp  texture.cpp  utils.cpp
tests/: CMakeLists.txt
tests/HelloWorld/: CMakeLists.txt  main.cpp
tests/common/: CMakeLists.txt
tests/common/include/okami/test/: gfx_env.hpp
tests/common/src/: gfx_env.cpp
tests/hello_world/: CMakeLists.txt
tests/ogl_im3d/: CMakeLists.txt  main.cpp
tests/ogl_static_mesh/: CMakeLists.txt  main.cpp
tests/ogl_texture/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt
tools/embed/: CMakeLists.txt  embedfile.cpp
